--- a/index.ipynb
+++ b/index.ipynb
@@ -12,12 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "We now know what HTML is. We know how to create a properly-formatted HTML\n",
-    "document and we know how to browse the HTML references. We have everything\n",
-    "we need to be HTML authors. However, if we look at our rendered HTML pages, we\n",
-    "can't help but notice that they look a little plain. How do we make them look\n",
-    "more attractive?  And why can't we make our pages look better with only HTML\n",
-    "itself? We'll solve those questions in this lesson."
+    "You now know what HTML is and how to create a properly-formatted HTML document. That said, if you look at the HTML pages thus far, you can't help but notice that they look a little plain. To make them more attractive (and responsive), you can use Cascanding Style Sheets or CSS!"
    ]
   },
   {
@@ -36,18 +31,7 @@
    "source": [
     "## Identify the Separation of Content and Presentation\n",
     "\n",
-    "HTML lets us mark-up our content with semantic _structure_. This is what lets\n",
-    "us build solid foundations for our content and it's the chief purpose of HTML.\n",
-    "\n",
-    "It would be great to be able to say, \"Browser, when you see a `p` tag with\n",
-    "`id` of `my-name`, make the first letter be huge!\" Or, to get your readers'\n",
-    "attention, you might say, \"Browser, if you see _any_ tag with a `class` of\n",
-    "`warning` surround it with a red box!\"\n",
-    "\n",
-    "HTML authors believe that creating marked-up documents and styling marked-up\n",
-    "documents are entirely separate tasks. They see a difference between writing\n",
-    "_content_ (the data within the HTML document) and specifying _presentation_,\n",
-    "the rules for displaying the rendered elements.  We use HTML for content and"
+    "HTML lets you mark-up our content with semantic _structure_. It forms the skeleton of your web page. It would be great to be able to say, \"Browser, when you see a `p` tag with `id` of `my-name`, make the first letter be huge!\" Or, to get your readers' attention, you might say, \"Browser, if you see _any_ tag with a `class` of `warning` surround it with a red box!\" HTML authors believe that creating marked-up documents and styling marked-up documents are entirely separate tasks. They see a difference between writing _content_ (the data within the HTML document) and specifying _presentation_, the rules for displaying the rendered elements.  We use HTML for content and"
    ]
   },
   {
@@ -56,11 +40,11 @@
    "source": [
     "## Identify the Role of CSS\n",
     "\n",
-    "CSS, or \"Cascading Style Sheets,\" tell us how to write rules that define how\n",
+    "CSS, or \"Cascading Style Sheets,\" tell you how to write rules that define how\n",
     "browsers will present HTML. Rules in CSS won't look like HTML and they usually\n",
     "live in a file apart from our HTML file.\n",
     "\n",
-    "CSS handles all of the ways we want to customize our content's look and feel\n",
+    "CSS handles all of the ways you want to customize your content's look and feel\n",
     "from margins and colors, to column-based layout!"
    ]
   },
@@ -79,9 +63,9 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "We separate the content of our HTML pages from their presentation, which we\n",
-    "style with CSS. By keeping the two separate, we not only utilize the best tools\n",
-    "for each job, but we can change code for one without disturbing the code for\n",
+    "Web developers separate the content of our HTML pages from their presentation, which they\n",
+    "style with CSS. By keeping the two separate, you not only utilize the best tools\n",
+    "for each job, but you can change code for one without disturbing the code for\n",
     "the other."
    ]
   }
