--- a/index.ipynb
+++ b/index.ipynb
@@ -7,13 +7,15 @@
     "# Separating Content and Presentation\n",
     "\n",
     "## Introduction\n",
-    "You now know what HTML is and how to create a properly-formatted HTML document. That said, if you look at the HTML pages thus far, you can't help but notice that they look a little plain. To make them more attractive (and responsive), you can use Cascading Style Sheets or CSS!\n",
+    "\n",
+    "You now know what HTML is and have explored a properly-formatted HTML document. That said, if you look at the HTML pages thus far, you can't help but notice that they look a little plain. To make them more attractive (and responsive), you can use Cascading Style Sheets or CSS!\n",
     "\n",
     "## Objectives\n",
+    "\n",
     "You will be able to:  \n",
     "\n",
-    "* Identify the separation of content and presentation  \n",
-    "* Explain the role of CSS\n",
+    "- Identify the separation of content and presentation  \n",
+    "- Explain the role of CSS\n",
     "\n",
     "## Identify the Separation of Content and Presentation\n",
     "\n",
@@ -21,23 +23,18 @@
     "\n",
     "## Explain the Role of CSS\n",
     "\n",
-    "CSS, or \"Cascading Style Sheets,\" tells you how to write rules that define how\n",
-    "browsers will present HTML. Rules in CSS won't look like HTML and they usually\n",
-    "live in a file apart from our HTML file.\n",
+    "CSS, or \"Cascading Style Sheets,\" tells you how to write rules that define how browsers will present HTML. Rules in CSS won't look like HTML and they usually live in a file apart from our HTML file.\n",
     "\n",
-    "CSS handles all of the ways you want to customize your content's look and feel\n",
-    "from margins and colors, to column-based layout!\n",
+    "CSS handles all of the ways you want to customize your content's look and feel from margins and colors, to column-based layout!\n",
     "\n",
     "## Additional Resources\n",
     "\n",
-    "* [CSS Guidelines: The Separation of Concerns](https://cssguidelin.es/#the-separation-of-concerns)\n",
-    "* [CSS Zen Garden](http://www.csszengarden.com/)\n",
+    "- [CSS Guidelines: The Separation of Concerns](https://cssguidelin.es/#the-separation-of-concerns)\n",
+    "- [CSS Zen Garden](http://www.csszengarden.com/)\n",
     "\n",
     "## Summary\n",
-    "Web developers separate the content of our HTML pages from their presentation, which they\n",
-    "style with CSS. By keeping the two separate, you not only utilize the best tools\n",
-    "for each job, but you can change code for one without disturbing the code for\n",
-    "the other."
+    "\n",
+    "Web developers separate the content of our HTML pages from their presentation, which they style with CSS. By keeping the two separate, you not only utilize the best tools for each job, but you can change code for one without disturbing the code for the other."
    ]
   }
  ],
@@ -46,6 +43,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
